packages/webassemblyjs/test/fixtures/type-errors/operand-if-missing/module.wast
(module (func $type-if-operand-missing
	(if (then))
))
